syntax = "proto3";

import "google/protobuf/timestamp.proto";

//package sensetime.viper.lite.lambda.event;
package a.b;

service Greeter {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
    google.protobuf.Timestamp updated_at = 7;
}

message HelloReply {
    // Reply contains the greeting message
    string message = 1;
}